--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="col-md-4">
   </div>
   <div class="col-md-4 chart">
+    <h1> Sample </h1>
       <canvas baseChart width="400" height="200" [datasets]="datasets" [labels]="labels" [options]="options" [colors]="lineChartColor"
           [chartType]="lineChartType"></canvas>
       <div class="log-area" id="log-area">
